# sqlgrants

./: .gitignore  .travis.yml  README.md  config.py  docker-compose.yaml  env.ini  requirements.txt  run.py  setup.cfg  setup.py  tox.ini
grants/: __init__.py  exceptions.py  mysql.py  utils.py
grants/mysql/: mysql.py
requirements/: common.txt  tests.txt
src/sqlgrants/: base.py
src/sqlgrants/mysql/: grants.py  mysql.py
src/tests/: test_first.py  test_mysql.py
