[metadata]
name = python-SQLGrants
version = 1.0.1
author = Vadim Meshcheryakov
author_email = painassasin@icloud.com
home-page = https://github.com/painassasin/sqlgrants
description= Grants processing library
platform = any
install_requirements =
    SQLAlchemy~=1.4
    mysql-connector-python~=8.0.25

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.8
package_dir =
    sqlgrants=src/sqlgrants
    tests=src/sqlgrants
packages =
    sqlgrants
test_suite = tests
setup_requires =
    setuptools >=30.3.0

[sdist]
formats = gztar