[metadata]
name = python-SQLGrants
version = 1.1.1
author = Vadim Meshcheryakov
author_email = painassasin@icloud.com
home_page = https://github.com/painassasin/sqlgrants
description= Grants processing library
long_description = file: README.md
long_description_content_type = text/markdown
platform = any

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requirements =
    SQLAlchemy~=1.4
    mysql-connector-python~=8.0.25
python_requires = >= 3.8
package_dir =
    sqlgrants=src/sqlgrants
    tests=src/sqlgrants
test_suite = tests
setup_requires =
    setuptools >=30.3.0

[options.packages.find]
where=src

[sdist]
formats = gztar